--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
         <div class="attribution">
           Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-          Coded by <a href="#">Stéphane GERNEZ</a>.
+          Coded by <a href="https://baieduweb.fr">Stéphane GERNEZ</a>.
         </div>
       </div>
     </main>
