--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <main>
       <div class="wrapper">
         <div class="card">
-          <img src="/images/image-qr-code.png" alt="">
+          <img src="./images/image-qr-code.png" alt="">
           <div class="card-body">
             <h1 class="outfit-700">Improve your front-end skills by building projects</h1>
             <p class="outfit-400">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
